# search_orders

./: .env  .gitignore  README.md  pyproject.toml
search_orders_backend/: manage.py
search_orders_backend/search_orders/: apps.py  models.py  serializers.py  tests.py  views.py
search_orders_backend/search_orders_backend/: asgi.py  settings.py  urls.py  wsgi.py
